# Trademarkia_assessment

./: .env  .env.example  .gitignore  ARCHITECTURE.md  DOCKER.md  Dockerfile  Dockerfile.streamlit  PIPELINE_ANALYSIS.md  QUICKSTART.md  README.md  TODO.md  analysis.ipynb  check_pinecone.py  docker-compose.yml  gmm_model.pkl  ingest_local_dataset.py  pyproject.toml  requirements.txt  run_server.py  streamlit_app.py  test_imports.py  test_startup.py
backend/: main.py  run_server.py
backend/.streamlit/: config.toml
backend/api/: __init__.py  routes.py  schemas.py
backend/docker/: Dockerfile.streamlit
backend/ml/: clustering.py  embeddings.py  semantic_cache.py  vector_db.py
backend/pipeline/: __init__.py  data_pipeline.py
docker/: Dockerfile  Dockerfile.streamlit  docker-compose.yml
frontend/: streamlit_app.py
frontend/.streamlit/: config.toml
scripts/: ingest_data.py  load_data.py
src/: __init__.py  app.py  clustering.py  data_pipeline.py  embeddings.py  pinecone_client.py  semantic_cache.py
